Test/git-issues/git-issue-551.dfy.expect
git-issue-551.dfy(27,15): Error: a call to a ghost predicate is allowed only in specification contexts (consider declaring the predicate with 'predicate method')
1 resolution/type errors detected in git-issue-551.dfy
